--- a/src/GulpExample/project.json
+++ b/src/GulpExample/project.json
@@ -17,7 +17,8 @@
     "Microsoft.Extensions.Logging.Console": "1.1.0",
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0"
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
+    "OdeToCode.AddFeatureFolders": "1.0.4"
   },
 
   "tools": {
